# sui-ctf-framework

./: .gitignore  Cargo.toml  LICENSE  README.md
example/challenge_example/framework/: Cargo.toml
example/challenge_example/framework-solve/dependency/: Move.toml
example/challenge_example/framework-solve/dependency/sources/: merchstore.move
example/challenge_example/framework-solve/solve/sources/: solve.move
example/challenge_example/framework/chall/: Move.toml
example/challenge_example/framework/src/: main.rs
examples/challenge_example/: README.md
examples/challenge_example/framework/: Cargo.toml
examples/challenge_example/framework-solve/dependency/: Move.toml
examples/challenge_example/framework-solve/dependency/sources/: ctf.move  osec.move
examples/challenge_example/framework-solve/solve/: Move.toml
examples/challenge_example/framework-solve/src/: main.rs
examples/challenge_example/framework/chall/sources/: otterloan.move  otterswap.move  router.move
examples/challenge_example/framework/src/: main.rs
examples/challenge_example_2/sources/framework/: Cargo.toml
examples/challenge_example_2/sources/framework-solve/dependency/: Move.toml
examples/challenge_example_2/sources/framework-solve/dependency/sources/: city.move
examples/challenge_example_2/sources/framework-solve/solve/: Move.toml
examples/challenge_example_2/sources/framework-solve/solve/sources/: solve.move
examples/challenge_example_2/sources/framework-solve/src/: main.rs
examples/challenge_example_2/sources/framework/chall/: Move.toml
examples/challenge_example_2/sources/framework/chall/sources/: city.move
examples/challenge_example_2/sources/framework/src/: main.rs
examples/challenge_example_3/: README.md  run_client.sh  run_server.sh
examples/challenge_example_3/framework/: Cargo.toml
examples/challenge_example_3/framework-solve/: Cargo.toml
examples/challenge_example_3/framework-solve/dependency/: Move.toml
examples/challenge_example_3/framework-solve/solve/: Move.toml
examples/challenge_example_3/framework-solve/solve/sources/: solution.move
examples/challenge_example_3/framework-solve/src/: main.rs
examples/challenge_example_3/framework/chall/: Move.toml
examples/challenge_example_3/framework/chall/sources/: interactive_ctf.move
examples/challenge_example_3/framework/src/: main.rs
mv_examples/: demo.mv  demo2.mv
src/: lib.rs
