[package]
name = "sui-ctf-framework"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/otter-sec/sui-ctf-framework"
description = "A framework for building sui based capture the flag challenges"
repository = "https://github.com/otter-sec/sui-ctf-framework"
keywords = ["sui", "blockchain", "ctf", "Capture The Flag", "security", "emulation", "framework"]
readme = "README.md"
categories = ["concurrency", "cryptography::cryptocurrencies", "simulation"]

[dependencies]
tempfile = "3.3.0"
serde_json = "1.0.95"
once_cell = "1.7.2"
clap = { version = "4.1.4", features = ["derive"] }
diesel-async = { version = "0.3.0", features = ["deadpool", "postgres"] }
serde = { version = "1.0", features = ["derive"] }

sui-protocol-config = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "sui-protocol-config"}
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "sui-types"}
sui-transactional-test-runner = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "sui-transactional-test-runner"}

move-symbol-pool = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "move-symbol-pool" }
move-stdlib = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "move-stdlib" }
move-compiler = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "move-compiler" }
move-binary-format = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "move-binary-format" }
move-command-line-common = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "move-command-line-common" }
move-transactional-test-runner = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "move-transactional-test-runner" }
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "move-core-types" }
move-bytecode-source-map = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.30.1", package = "move-bytecode-source-map" }
